Hoàn thành chức năng gửi health check record cho parent